@@ -15,6 +15,10 @@
 
 #include <string.h>
 #include <glib.h>
+
+#include "inkscape.h"
+#include "document.h"
+#include "xml/repr-private.h"
 #include "rdf.h"
 
 /*
@@ -146,24 +150,24 @@ struct rdf_license_t rdf_licenses [] = {
 };
 
 struct rdf_work_entity_t rdf_work_entities [] = {
-    { "title", N_("Title"), "dc:title" },
-    { "date", N_("Date"), "dc:date" },
+    { "title", N_("Title"), "dc:title", RDF_CONTENT },
+    { "date", N_("Date"), "dc:date", RDF_CONTENT },
 
     /* these are "agent" tags actually... */
-    { "creator", N_("Creator"), "dc:creator" },
-    { "owner", N_("Owner"), "dc:owner" },
-    { "publisher", N_("Publisher"), "dc:publisher" },
+    { "creator", N_("Creator"), "dc:creator", RDF_AGENT },
+    { "owner", N_("Owner"), "dc:rights", RDF_AGENT },
+    { "publisher", N_("Publisher"), "dc:publisher", RDF_AGENT },
 
-    { "source", N_("Source"), "dc:source" },
-    { "keywords", N_("Keywords"), "dc:subject" },
+    { "source", N_("Source"), "dc:source", RDF_CONTENT },
+    { "keywords", N_("Keywords"), "dc:subject", RDF_CONTENT },
 
     /* this is a multi-line tag */
-    { "description", N_("Description"), "dc:description" },
+    { "description", N_("Description"), "dc:description", RDF_CONTENT },
 
     /* this uses an element */
-    { "license", N_("License"), "dc:license" },
+    { "license", N_("License"), "cc:license", RDF_RESOURCE },
     
-    { NULL, NULL, NULL }
+    { NULL, NULL, NULL, RDF_CONTENT }
 };
 
 /**
@@ -301,18 +305,94 @@ rdf_string(struct rdf_t * rdf)
 }
 */
 
+
+/**
+ *  \brief   Recursively find the SPRepr matching the given XML name.
+ *  \return  A pointer to the matching SPRepr
+ *  \param   repr    The SPRepr to start from
+ *  \param   name    The desired XML name
+ *  
+ */
+SPRepr *
+repr_lookup_name ( SPRepr *repr, const gchar *name )
+{
+    g_return_val_if_fail (repr != NULL, NULL);
+    g_return_val_if_fail (name != NULL, NULL);
+
+    GQuark const quark = g_quark_from_string (name);
+
+    //printf("saw: '%s'\n",SP_REPR_NAME(repr));
+    if ( (unsigned)repr->name == quark ) return repr;
+
+    for (SPRepr *child = repr->children; child != NULL; child = child->next) {
+        SPRepr * found = repr_lookup_name ( child, name );
+        if (found != NULL) return found;
+    }
+
+    return NULL;
+}
+
+/**
+ *  \brief   Pull the text out of an RDF entity, depends on how it's stored
+ *  \return  A pointer to the entity's static contents as a string
+ *  \param   repr    The XML element to extract from
+ *  \param   entity  The desired RDF/Work entity
+ *  
+ */
+const gchar *
+rdf_text_from_repr ( SPRepr * repr, struct rdf_work_entity_t * entity )
+{
+    g_return_val_if_fail (repr != NULL, NULL);
+    g_return_val_if_fail (entity != NULL, NULL);
+
+    //printf("Getting '%s' contents from '%s'\n",entity->tag,SP_REPR_NAME(repr));
+
+    SPRepr * temp=NULL;
+    switch (entity->datatype) {
+        case RDF_CONTENT:
+            g_return_val_if_fail (repr->children != NULL, NULL);
+            return (const gchar *)repr->children->content;
+        case RDF_AGENT:
+            temp = repr_lookup_name ( repr, "cc:Agent" );
+            g_return_val_if_fail (temp != NULL, NULL);
+
+            temp = repr_lookup_name ( temp, "dc:title" );
+            g_return_val_if_fail (temp != NULL, NULL);
+
+            g_return_val_if_fail (temp->children != NULL, NULL);
+            return (const gchar *)temp->children->content;
+        case RDF_RESOURCE:
+            return sp_repr_attr(repr, "rdf:resource");
+    }
+    return NULL;
+}
+
 /**
  *  \brief   Retrieves a known RDF/Work entity's contents from the document XML by name
  *  \return  A pointer to the entity's static contents as a string
  *  \param   entity  The desired RDF/Work entity
  *  
  */
-gchar *
+const gchar *
 rdf_get_work_entity(struct rdf_work_entity_t * entity)
 {
-    /* TODO: obviously, we need to also pass the document and then extract
-     * the desired RDF entity from the XML */
-    return "";
+    g_return_val_if_fail (entity != NULL, NULL);
+
+    //printf("want '%s'\n",entity->title);
+
+    SPRepr * rdf = repr_lookup_name ( SP_ACTIVE_DOCUMENT->rroot, "rdf:RDF" );
+
+    if (rdf == NULL) return NULL;
+    
+    SPRepr * work = repr_lookup_name ( rdf, "cc:Work" );
+    if (work == NULL) return NULL;
+
+    SPRepr * item = repr_lookup_name ( rdf, entity->tag );
+    if (item == NULL) return NULL;
+
+    const gchar * result = rdf_text_from_repr ( item, entity );
+    //printf("found '%s' == '%s'\n", entity->title, result );
+    return result;
 }
 
 /**
@@ -322,7 +402,7 @@ rdf_get_work_entity(struct rdf_work_entity_t * entity)
  *  
  */
 void
-rdf_set_work_entity(struct rdf_work_entity_t * entity, gchar * string)
+rdf_set_work_entity(struct rdf_work_entity_t * entity, const gchar * string)
 {
     g_assert ( entity != NULL );
     g_assert ( string != NULL );
